esta dando erro nao sei se sou eu ou se é a API